# stdex

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build_lib.sh  build_tests.bat  build_tests.sh  build_tests_bcc32.bat  build_tests_qnx.sh  codecov.yml  get_code_cov.sh  lgtm.yml  merge_to_work.sh  run_tests.bat  run_tests.sh
.github/workflows/: c-cpp.yml  codeql.yml  coverage,yml  coverage.yml
include/: basic_string_ex.h  chrono  chrono.hpp  condition_variable  condition_variable.hpp  core.h  mutex  mutex.hpp  nullptr.h  ratio  ratio.hpp  system_error  system_error.hpp  thread  thread.hpp  type_traits  type_traits.hpp  type_zero.hpp  types_ex.h
pthread/: config.h  pthread.h  sched.h
src/: chrono.cpp  mutex.cpp  thread.cpp
stdex/: .travis.yml  CMakeLists.txt  build_lib.bat  build_lib.sh  build_lib_bcc32.bat  build_lib_qnx.sh  build_lib_qnx_4.sh
stdex/include/: algorithm.hpp  basic_string_ex.h  chrono.hpp  code_extensions.h  condition_variable  condition_variable.hpp  core.h  cstdint  cstdint.hpp  ctime.hpp  functional.hpp  future.hpp  iterator  iterator.hpp  memory.hpp  move.hpp  mutex  mutex.hpp  nullptr.h  parameter_pack.h  property.hpp  ratio  ratio.hpp  span.hpp  sstream  sstream.hpp  stdint_ex.h  string.hpp  system_error  system_error.hpp  thread  thread.hpp  tuple.hpp  type_traits  type_traits.hpp  type_zero.hpp  typeindex  typeindex.hpp
stdex/src/: chrono.cpp  mutex.cpp  thread.cpp
tests/: add_const.cpp  add_cv.cpp  add_lvalue_reference.cpp  add_pointer.cpp  add_volatile.cpp  alignment_of.cpp  all_of.cpp  any_of.cpp  chrono_duration.cpp  chrono_duration_cast.cpp  chrono_duration_fail1.cpp  chrono_duration_fail2.cpp  chrono_duration_fail3.cpp  chrono_duration_fail4.cpp  chrono_duration_fail5.cpp  chrono_steady_clock.cpp  chrono_system_clock.cpp  chrono_time_point.cpp  chrono_time_point_cast.cpp  common_type.cpp  common_type_fail1.cpp  condition_variable.cpp  condition_variable_fail1.cpp  condition_variable_fail2.cpp  conditional.cpp  copy_if.cpp  copy_n.cpp  core.cpp  core_nullptr.cpp  cstdint.cpp  ctime.cpp  decay.cpp  defines.cpp  dummy.cpp  dummy_s.cpp  enable_if.cpp  error_category.cpp  error_category_fail1.cpp  error_code.cpp  error_code_fail1.cpp  (+136 more)
tests/testsuit/: macro_defines_check.h
